[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/0x72_16x16RobotTileset.v1.png" type="Texture" id=1]
[ext_resource path="res://objects/inanimate/Part.gd" type="Script" id=2]
[ext_resource path="res://assets/Pickup_Coin20.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Part" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 448, 32, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ControlTip" type="Label" parent="."]
visible = false
margin_left = -33.8741
margin_top = -41.0
margin_right = 34.1259
margin_bottom = -10.0
text = "Robot Part
Z: Pick Up"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundEffect2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Part_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Part_body_exited"]
[connection signal="finished" from="SoundEffect2D" to="." method="_on_SoundEffect_finished"]
